# ytdlp-gui

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  build.py  pyproject.toml  run.bat  run.sh  ytdlp_gui.py
.github/workflows/: ci.yml
tests/: test_ytdlp_gui.py
